style: fix alignment in tablet view - excess space

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -26,7 +26,7 @@ main {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  gap: 3rem;
+  gap: 10rem;
 }
 
 .bg {
@@ -51,12 +51,12 @@ main {
   text-align: center;
   color: white;
   position: relative;
-  background-color: blue;
   max-width: 25rem;
 }
 
 .profile img {
-  height: 30rem;
+  height: auto;
+  width: 60rem;
   object-fit: cover;
 }
 
@@ -152,13 +152,12 @@ section#contactMe {
 }
 
 footer img {
-  display: block;
-  height: auto;
   width: 100vw;
 }
 
 @media (min-width: 900px) {
   .profile-wrapper {
+    padding: 10rem 5rem;
     display: block;
     max-width: 90vw;
   }
@@ -166,19 +165,25 @@ footer img {
   .profile {
     float: left;
     z-index: 1;
-    margin-right: 2rem;
+    margin-right: 5rem;
+    padding: 2rem;
+  }
+
+  .profile img {
+    transform: scale(1.5);
   }
 
   .profile h1 {
-    top: 5rem;
-    transform: translateX(15rem);
+    top: 0;
+    transform: translateX(20rem);
   }
 
   .about-me {
     padding: 10rem 2rem;
-    width: 60vw;
+    width: 80vw;
     background-color: white;
-    transform: translateY(10rem);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    transform: translateY(7rem);
   }
 
   .profile-wrapper .socials {
@@ -212,17 +217,22 @@ footer img {
 
   .profile img {
     height: 100%;
+    transform: scale(1.3);
   }
 
   .profile h1 {
     height: min-content;
-    bottom: 1px;
-    transform: translateY(25rem);
+    width: 100%;
+
+    transform: translateX(-2rem);
+
+    margin-top: auto;
   }
 
   .about-me {
     padding: 2rem;
-    transform: translateY(0rem);
+    padding-left: 5rem;
+    transform: translateY(0);
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   }
 }
